apps/platform-ui/k8s/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-ui
  namespace: front-dev
  labels:
    app: platform-ui
spec:
  selector:
    app: platform-ui
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
