apps/platform-ui/k8s/homepage/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: platform-ui-gateway
  namespace: front-dev
spec:
  selector: { istio: ingressgateway }
  servers:
    - port: { number: 80, name: http, protocol: HTTP }
      hosts: [ "platform-ui.dev.localhost" ]
